# agent-kai

./: .gitignore  README.md
.github/: pull_request_template.md
.github/workflows/: check-versions-bumped.yaml  pull-request.yaml
backend/: .env.example  Dockerfile  README.md  mypy.ini  pyproject.toml
backend/scripts/: api  build-docker-image
backend/src/agent_kai/agent/: graph.py  llm.py  state.py
backend/src/agent_kai/api/: app.py
backend/src/agent_kai/api/schemas/: chat.py  ratings.py  version.py
backend/src/agent_kai/settings/: __init__.py
backend/src/agent_kai/tools/: __init__.py  aoi.py  satellite_image.py
backend/tests/: conftest.py  test_aoi.py  test_satellite_image.py  test_settings.py
backend/tests/api/: test_chat_endpoint.py  test_ratings_endpoint.py  test_root_endpoint.py
frontend/: .env.example  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/app/: app.tsx  main.tsx
frontend/app/artifacts/: config.tsx
frontend/app/artifacts/components/: chat-artifact-aoi.tsx  chat-artifact-image.tsx
frontend/app/components/: chat-artifact.tsx  chat-input.tsx  chat-messages.tsx  chat-rating.tsx  chat-user-bubble.tsx  chat.tsx  logo.tsx  md-renderer.tsx  page-footer.tsx  page-header.tsx  page-modal.tsx  smart-link.tsx  source-link.tsx  status-banner.tsx
frontend/app/pages/about-modal/: index.tsx
frontend/app/pages/chat/: index.tsx
frontend/app/pages/home/: index.tsx
frontend/app/pages/privacy-policy-modal/: index.tsx
frontend/app/pages/responsible-modal/: index.tsx
frontend/app/stores/: artifact-store.tsx  chat-store.tsx  msg.dev.json  sources-store.tsx  types.d.ts
frontend/app/styles/: scrollarea.recipe.ts  theme.ts
frontend/app/utils/: chart-stream.ts  dev.ts
frontend/scripts/: build-docker-image  server
