[project]
name = "agentkai"
version = "0.13.0"
description = "A barebones demo of an agentic chat application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.9",
    "httpx[http2]>=0.28.1",
    "langchain>=0.3.26",
    "langchain-mistralai>=0.2.10",
    "langfuse>=3.1.3",
    "langgraph>=0.4.8",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.34.3",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "aiohttp>=3.12.15",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.13",
    "mypy>=1.16.0",
    "types-requests>=2.32.4.20250611",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

unsafe-fixes = true

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_kai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Accessing the 'model_fields' attribute on the instance is deprecated"
]
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
